@@ -916,6 +916,13 @@ argument_list|(
 name|doc
 argument_list|)
 decl_stmt|;
+if|if
+condition|(
+name|facetOrdTermsEnum
+operator|!=
+literal|null
+condition|)
+block|{
 name|reuse
 operator|=
 name|facetFieldDocTermOrds
@@ -927,6 +934,7 @@ argument_list|,
 name|reuse
 argument_list|)
 expr_stmt|;
+block|}
 name|int
 name|chunk
 decl_stmt|;
@@ -950,11 +958,17 @@ block|{
 name|chunk
 operator|=
 name|reuse
+operator|!=
+literal|null
+condition|?
+name|reuse
 operator|.
 name|read
 argument_list|(
 name|buffer
 argument_list|)
+else|:
+literal|0
 expr_stmt|;
 if|if
 condition|(
@@ -1271,6 +1285,10 @@ condition|)
 block|{
 if|if
 condition|(
+name|facetOrdTermsEnum
+operator|==
+literal|null
+operator|||
 operator|!
 name|facetOrdTermsEnum
 operator|.
@@ -1345,7 +1363,16 @@ name|TermsEnum
 operator|.
 name|SeekStatus
 name|seekStatus
-init|=
+decl_stmt|;
+if|if
+condition|(
+name|facetOrdTermsEnum
+operator|!=
+literal|null
+condition|)
+block|{
+name|seekStatus
+operator|=
 name|facetOrdTermsEnum
 operator|.
 name|seekCeil
@@ -1354,7 +1381,19 @@ name|facetPrefix
 argument_list|,
 literal|true
 argument_list|)
-decl_stmt|;
+expr_stmt|;
+block|}
+else|else
+block|{
+name|seekStatus
+operator|=
+name|TermsEnum
+operator|.
+name|SeekStatus
+operator|.
+name|END
+expr_stmt|;
+block|}
 if|if
 condition|(
 name|seekStatus
@@ -1578,6 +1617,13 @@ name|mergePos
 operator|=
 name|startFacetOrd
 expr_stmt|;
+if|if
+condition|(
+name|tenum
+operator|!=
+literal|null
+condition|)
+block|{
 name|tenum
 operator|.
 name|seekExact
@@ -1592,6 +1638,7 @@ operator|.
 name|term
 argument_list|()
 expr_stmt|;
+block|}
 block|}
 DECL|method|nextTerm
 specifier|protected
